<resources>
    <string name="app_name">Anneflix</string>
    <string name="next">Next</string>
    <string name="previous">Home Page</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_dashboard_second">Hello DashboardSecondFragment. Arg: %1$s</string>
    <string name="hello_notifications_second">Hello NotificationsSecondFragment. Arg: %1$s</string>
    <string name="title_home">Home</string>
    <string name="title_now_playing_movies">Now Playing Movies</string>
    <string name="title_group">About Us</string>
    <string name="text_a">Axel LANDRE</string>
    <string name="text_p">Paul Kenji BOCHATON</string>
    <string name="text_j">Jules David</string>
    <string name="text_h">Hé DU</string>
    <string name="category_a">My favorite movie categories :</string>
    <string name="movie_a">My favorite movies :</string>
    <string name="category_1">Science-Fiction</string>
    <string name="category_2">Western</string>
    <string name="home_second">Movie List</string>
    <string name="home_third">Information</string>

</resources>